Show request experiment progress
